# Vivid

./: .gitignore  .gitmodules  README.md
consumer/gnome/: README.md  meson.build  meson_options.txt  package-lock.json  package.json  run-config.sh.in
consumer/gnome/extension/: buildConfig.js.in  extension.js  meson.build  metadata.json.in  prefs.js
consumer/gnome/extension/common/: mpris.js
consumer/gnome/extension/schemas/: dev.rikka.vivid.consumer.gnome.gschema.xml
consumer/gnome/extension/shell/: logger.js  loggerConfig.js.in
consumer/gnome/extension/shell/helper/: display-helper.js
consumer/gnome/extension/shell/integration/: autoPause.js  gnomeShellOverride.js  roundedCornersEffect.js  windowManager.js
consumer/gnome/extension/shell/services/: displayHelper.js
consumer/gnome/extension/shell/ui/: wallpaper.js
consumer/gnome/src/display_consumer/: log_internal.h  meson.build  vivid_display_consumer_buffer_paintable.c  vivid_display_consumer_buffer_paintable.h  vivid_display_consumer_dmabuf_texture.c  vivid_display_consumer_dmabuf_texture.h  vivid_display_consumer_frame_importer.c  vivid_display_consumer_frame_importer.h  vivid_display_consumer_receiver.c  vivid_display_consumer_receiver.h  vivid_display_consumer_vulkan_backend.c  vivid_display_consumer_vulkan_backend.h  vivid_display_consumer_vulkan_blit.c  vivid_display_consumer_vulkan_blit.h
consumer/gnome/src/display_consumer/tests/: vivid_display_consumer_receiver_test.c
consumer/gnome/src/protocol/: meson.build  vivid_display_codec.c  vivid_display_protocol.h
consumer/gnome/src/protocol/tests/: vivid_display_codec_test.c
consumer/kde/: CMakeLists.txt  README.md
consumer/kde/package/: metadata.json  metadata.json.in
consumer/kde/package/contents/config/: main.xml
consumer/kde/package/contents/ui/: ImportTest.qml  WallpaperSurface.qml  WindowModel.qml  config.qml  main.qml
consumer/kde/src/qml_module/: log_internal.h  plugin_info.hpp  vivid_display.cpp  vivid_display.hpp  vivid_display_protocol_compat.h  vivid_kde_drm_fourcc.h  vivid_kde_vulkan_backend.c  vivid_kde_vulkan_backend.h  vivid_kde_vulkan_blit.c  vivid_kde_vulkan_blit.h  vivid_media_bridge.cpp  vivid_media_bridge.hpp
producer/: README.md
producer/packaging/flatpak/: io.github.ayasa520.Vivid.yml  vivid-launcher
producer/resources/: io.github.ayasa520.Vivid.desktop  io.github.ayasa520.Vivid.metainfo.xml
producer/src/daemon/: CMakeLists.txt  vivid_dmabuf_negotiation.c  vivid_dmabuf_negotiation.h  vivid_producer.c  vivid_producer_config.c  vivid_producer_config.h  vivid_producer_renderer.c  vivid_producer_renderer.h  vivid_unbind_ack_tracker.c  vivid_unbind_ack_tracker.h
producer/src/daemon/tests/: vivid_dmabuf_negotiation_test.c  vivid_unbind_ack_tracker_test.c
producer/src/graphics/: vivid_gpu_devices.c  vivid_gpu_devices.h
producer/src/protocol/: meson.build
producer/src/renderer_api/: vivid_producer_frame_route.hpp  vivid_renderer_release_gate.h
producer/src/renderers/scene/: CMakeLists.txt  meson.build  vivid_scene_producer.cpp  vivid_scene_producer.h  vivid_scene_project.hpp
producer/src/renderers/video/: CMakeLists.txt  vivid_video_producer.cpp  vivid_video_producer.h  vivid_video_vulkan_backend.cpp  vivid_video_vulkan_backend.hpp
producer/src/renderers/web/: CMakeLists.txt  vivid_web_bridge_js.h  vivid_web_gbm_usage_shim.c  vivid_web_helper_main.cpp  vivid_web_producer.cpp  vivid_web_producer.h  vivid_web_vulkan_route.cpp  vivid_web_vulkan_route.hpp
producer/src/webui/: index.html  main.js  styles.css  vivid_webui_server.py
tools/: vivid.sh
tools/consumer_gnome/: build_env.sh  build_zip.sh  run.sh
tools/consumer_kde/: build_env.sh  run.sh
tools/producer/: build_direct_run.sh  build_env.sh  install_producer_app.sh  install_renderers.sh  install_webui.sh  run_direct_run_all.sh  run_direct_run_producer.sh  run_direct_run_webui.sh
tools/producer/flatpak/: build.sh  manifest_source.sh  prefetch_sources.sh  run_appdir.sh
